--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,26 +1,63 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>Account</members>
-        <members>Case</members>
-        <members>Contact</members>
-        <members>Lead</members>
-        <members>Product2</members>
-        <members>Order</members>
-        <name>CustomObject</name>
-    </types>
-    <types>
-        <members>Account-Account Layout</members>
-        <members>Case-Case Layout</members>
-        <members>Contact-Contact Layout</members>
-        <members>Lead-Lead Layout</members>
-        <members>Product2-Product Layout</members>
-        <members>Order-Order Layout</members>
-        <name>Layout</name>
-    </types>
-    <types>
-        <members>Admin</members>
-        <name>Profile</name>
-    </types>
-    <version>56.0</version>
+	<types>
+		<members>MedicalFacilityOpenHoursUpdate</members>
+		<members>RESTMedicalFacilities</members>
+		<members>RESTMedicalFacilitiesTests</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ApexTrigger</name>
+	</types>
+	<types>
+		<members>Health_Care_App</members>
+		<name>CustomApplication</name>
+	</types>
+	<types>
+		<members>Medical_Appointment__c</members>
+		<members>Medical_Facility__c</members>
+		<members>Medical_Insurence__c</members>
+		<members>Person__c</members>
+		<members>Prescription__c</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>Medical_Appointment__c</members>
+		<members>Medical_Facility__c</members>
+		<members>Medical_Insurence__c</members>
+		<members>Person__c</members>
+		<members>Prescription__c</members>
+		<name>CustomTab</name>
+	</types>
+	<types>
+		<members>Health_Care_App_UtilityBar</members>
+		<name>FlexiPage</name>
+	</types>
+	<types>
+		<members>Medical_Appointment__c-Medical Appointment Layout</members>
+		<members>Medical_Facility__c-Medical Facility Layout</members>
+		<members>Medical_Insurence__c-Medical Insurence Layout</members>
+		<members>Person__c-Doctor Layout</members>
+		<members>Person__c-Patient Layout</members>
+		<members>Person__c-Person Layout</members>
+		<members>Prescription__c-Prescription Layout</members>
+		<name>Layout</name>
+	</types>
+	<types>
+		<members>Admin</members>
+		<name>Profile</name>
+	</types>
+	<types>
+		<members>Medical_Appointment__c.On_Site</members>
+		<members>Medical_Appointment__c.Online</members>
+		<members>Person__c.Doctor</members>
+		<members>Person__c.Patient</members>
+		<name>RecordType</name>
+	</types>
+	<types>
+		<members>Person__c.If_pesel_is_correct</members>
+		<name>ValidationRule</name>
+	</types>
+	<version>58.0</version>
 </Package>
