--- a/.github/workflows/pushdevelop.yaml
+++ b/.github/workflows/pushdevelop.yaml
@@ -34,3 +34,5 @@ jobs:
 
       - name: "Deploy metadata"
         run: sfdx force:source:deploy -p "./force-app"
+      - name: "Run local tests"
+        run: sfdx apex run test --test-level RunLocalTests --result-format human
