waiting for test result

--- a/.github/workflows/pushdevelop.yaml
+++ b/.github/workflows/pushdevelop.yaml
@@ -35,4 +35,4 @@ jobs:
       - name: "Deploy metadata"
         run: sfdx force:source:deploy -p "./force-app"
       - name: "Run local tests"
-        run: sfdx apex run test --test-level RunLocalTests --result-format human
+        run: sfdx apex run test --test-level RunLocalTests --synchronous --result-format human
